--- a/.editorconfig
+++ b/.editorconfig
@@ -8,7 +8,7 @@ root = true
 # Use 2 spaces as indentation
 # Trim trailing whitespace
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 4
 insert_final_newline = true
 charset = utf-8
@@ -16,6 +16,7 @@ end_of_line = lf
 
 # Xml project files
 [*.{vcxproj,vcxproj.filters,msbuild,props,targets,ruleset,config,nuspec}]
+indent_style = space
 indent_size = 2
 end_of_line = crlf
 insert_final_newline = false
