--- a/VcPkgRef/VcPkgRef.vcxproj
+++ b/VcPkgRef/VcPkgRef.vcxproj
@@ -7,12 +7,18 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
+      <Configuration Condition="'$(Configuration)'==''">Debug</Configuration>
+      <Platform Condition="'$(Platform)' == ''">x64</Platform>
     <VCProjectVersion>16.0</VCProjectVersion>
-    <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{1d3079a5-46a1-4cad-88dc-f41f3c7b4a59}</ProjectGuid>
-    <RootNamespace>VcPkgRef</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <!-- Don't seem to do anything -->
+    <!--
+      <TargetFramework>net40</TargetFramework>
+      <TargetFrameworks>net40</TargetFrameworks>
+      -->
   </PropertyGroup>
+  <Import Project="$(MSBuildProjectExtensionsPath)$(MSBuildProjectFile).*.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
@@ -47,7 +53,25 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <!-- https://github.com/dotnet/project-system/issues/2491#issuecomment-874924412 -->
+  <ItemGroup>
+    <ProjectCapability Include="PackageReferences" />
+    <!--
+    <ProjectCapability Include="desktop" />
+    <ProjectCapability Include="native" />
+    <ProjectCapability Include="BuildWindowsDesktopTarget" />
+    -->
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="boost" Version="1.76.0.0" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+  <!--
+    Warns about double-import
+    It was already imported at
+    "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\amd64\Microsoft.Common.Targets (128,3)
+    -->
+  <Import Project="$(MSBuildProjectExtensionsPath)$(MSBuildProjectFile).*.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
