--- a/VcPkgRef/VcPkgRef.vcxproj
+++ b/VcPkgRef/VcPkgRef.vcxproj
@@ -16,6 +16,7 @@
     <!--
       <TargetFramework>net40</TargetFramework>
       <TargetFrameworks>net40</TargetFrameworks>
+      <TargetFrameworks>native</TargetFrameworks>
       -->
   </PropertyGroup>
   <Import Project="$(MSBuildProjectExtensionsPath)$(MSBuildProjectFile).*.props" />
