--- a/VcPkgRef/VcPkgRef.vcxproj
+++ b/VcPkgRef/VcPkgRef.vcxproj
@@ -12,12 +12,10 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{1d3079a5-46a1-4cad-88dc-f41f3c7b4a59}</ProjectGuid>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <!-- Don't seem to do anything -->
-    <!--
-      <TargetFramework>net40</TargetFramework>
-      <TargetFrameworks>net40</TargetFrameworks>
-      <TargetFrameworks>native</TargetFrameworks>
-      -->
+  </PropertyGroup>
+  <!-- https://github.com/dotnet/project-system/issues/2491#issuecomment-875703923 -->
+  <PropertyGroup Label="NuGet">
+    <ResolveNuGetPackages>false</ResolveNuGetPackages>
   </PropertyGroup>
   <Import Project="$(MSBuildProjectExtensionsPath)$(MSBuildProjectFile).*.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -57,11 +55,6 @@
   <!-- https://github.com/dotnet/project-system/issues/2491#issuecomment-874924412 -->
   <ItemGroup>
     <ProjectCapability Include="PackageReferences" />
-    <!--
-    <ProjectCapability Include="desktop" />
-    <ProjectCapability Include="native" />
-    <ProjectCapability Include="BuildWindowsDesktopTarget" />
-    -->
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="boost" Version="1.76.0.0" />
@@ -71,8 +64,8 @@
     Warns about double-import
     It was already imported at
     "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\amd64\Microsoft.Common.Targets (128,3)
-    -->
   <Import Project="$(MSBuildProjectExtensionsPath)$(MSBuildProjectFile).*.targets" />
+  -->
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
 </Project>
